--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.5.0",
     "mongoose": "^8.2.2",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.13",
     "ts-node": "^10.9.2"
   },
@@ -33,6 +34,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.11.30",
+    "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.14",
     "nodemon": "^3.1.0",
     "typescript": "^5.4.2"
